--- a/ToDo List/Base.lproj/Main.storyboard
+++ b/ToDo List/Base.lproj/Main.storyboard
@@ -43,6 +43,11 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="0OB-Au-fAy">
+                        <barButtonItem key="leftBarButtonItem" title="Edit" id="s04-2J-JBp">
+                            <connections>
+                                <action selector="editButtonPressed:" destination="BYZ-38-t0r" id="er2-Zu-4br"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="UB3-z8-Zoh">
                             <connections>
                                 <segue destination="0zX-hE-Z0I" kind="presentation" identifier="AddDetail" id="W1W-t8-Jld"/>
@@ -50,6 +55,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="addBarButton" destination="UB3-z8-Zoh" id="qjN-1O-AnG"/>
                         <outlet property="tableView" destination="aeG-kN-0Ca" id="FN6-CC-r7a"/>
                     </connections>
                 </viewController>
@@ -76,7 +82,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ocX-yN-YH6">
-                                                    <rect key="frame" x="20" y="5" width="334" height="34"/>
+                                                    <rect key="frame" x="19" y="5" width="334" height="34"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
